--- a/assistant4IOS/Base.lproj/Main.storyboard
+++ b/assistant4IOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="50s-d7-fyJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="50s-d7-fyJ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -201,6 +201,61 @@
             </objects>
             <point key="canvasLocation" x="1320" y="388"/>
         </scene>
+        <!--快完成计划！-->
+        <scene sceneID="dxm-hM-DZv">
+            <objects>
+                <tableViewController id="Uem-xK-duJ" customClass="PlanTableViewController" customModule="何凡" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="1zE-tU-bUC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="planCell" rowHeight="60" id="N8q-cn-kFB" customClass="PlanTableViewCell" customModule="何凡" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="414" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="N8q-cn-kFB" id="iq7-Of-u6S">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="跑步" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsk-e9-pSr">
+                                            <rect key="frame" x="25" y="8" width="167" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="当前进度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vSQ-LL-Ema">
+                                            <rect key="frame" x="25" y="30" width="154" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="完成度" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uv9-s1-Crk">
+                                            <rect key="frame" x="316" y="19" width="85" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="percentLabel" destination="uv9-s1-Crk" id="HV6-aV-Mk7"/>
+                                    <outlet property="processLabel" destination="vSQ-LL-Ema" id="CYs-5M-aet"/>
+                                    <outlet property="titileLabel" destination="hsk-e9-pSr" id="UaD-PO-rSd"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Uem-xK-duJ" id="jwu-p0-3oh"/>
+                            <outlet property="delegate" destination="Uem-xK-duJ" id="Nui-Nd-uW0"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="快完成计划！" id="9BO-0w-lf5"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mdw-6u-xGk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1222" y="-435"/>
+        </scene>
         <!--设置中心-->
         <scene sceneID="7UC-ov-e8n">
             <objects>
@@ -229,7 +284,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eut-2Z-qJV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="536" y="-473"/>
+            <point key="canvasLocation" x="2039" y="-435"/>
         </scene>
         <!--MainUI Tab Bar Controller-->
         <scene sceneID="wGz-ZE-hpq">
@@ -243,6 +298,7 @@
                     <connections>
                         <segue destination="FKB-vO-EiF" kind="relationship" relationship="viewControllers" id="0TR-HD-LVB"/>
                         <segue destination="eue-2b-elA" kind="relationship" relationship="viewControllers" id="y1X-qA-ih2"/>
+                        <segue destination="35w-Cd-CuP" kind="relationship" relationship="viewControllers" id="5WS-Ef-HT5"/>
                         <segue destination="Cf4-tv-MaI" kind="relationship" relationship="viewControllers" id="QSa-LJ-WZU"/>
                     </connections>
                 </tabBarController>
@@ -411,6 +467,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pCk-nM-fyj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="508" y="1270"/>
+        </scene>
+        <!--计划安排-->
+        <scene sceneID="Mma-BB-tVp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="35w-Cd-CuP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="计划安排" id="bVq-fD-Ldm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EtZ-r0-A9a">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Uem-xK-duJ" kind="relationship" relationship="rootViewController" id="tAx-0p-oa2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DIl-0n-aDE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="410" y="-435"/>
         </scene>
     </scenes>
     <resources>
